# tenure

./: .gitattributes  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docsite/: audit-catalog.md  changelog.md  index.md  installation.md  scope.md  stability.md  why-tenure.md
docsite/gallery/: index.md  telco-churn.md  the-ltv-gap.md  three-year-ltv.md
docsite/reference/: audit.md  datasets.md  estimators.md  outputs.md  plotting.md  study-design.md  validation.md
docsite/tutorials/: quickstart.md  retention-and-ltv.md  risk-modeling.md  time-varying.md  validation.md
scripts/: build_gallery_images.py
tenure/: __init__.py  _frame.py  demo.py  exceptions.py  landmark.py  plotting.py  study_design.py  workflow.py
tenure/audit/: __init__.py  base.py  registry.py  report.py
tests/: test_audit_tnr001.py  test_audit_tnr002.py  test_audit_tnr004.py  test_business_outputs.py  test_clean_cohort.py  test_cox.py  test_cox_diagnostics.py  test_cox_stratified.py  test_dedup.py  test_demo_gap.py  test_frame.py  test_gallery.py  test_hardening.py  test_hybrid.py  test_immortal_prevention.py  test_intervals.py  test_kaplan_meier.py  test_landmarking.py  test_logrank.py  test_nelson_aalen.py  test_panel_cv.py  test_parametric.py  test_perf.py  test_plotting.py  test_robustness.py  test_scoring.py  test_simulation.py  test_status_schema.py  test_study_design.py  test_svod_demo.py  test_temporal_split.py  test_time_varying_cox.py  test_validation_brier.py  test_validation_calibration.py  test_validation_cindex.py  test_workflow.py
(+29 files in other folders)
