[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tenure"
version = "0.5.0"
description = "Audit-first survival analysis for B2C customer churn -- makes the correct churn study design the default."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Michael", email = "michael@paradoxresolution.com" }]
keywords = [
  "survival-analysis",
  "churn",
  "retention",
  "ltv",
  "kaplan-meier",
  "customer-analytics",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["pandas>=2.0", "numpy>=1.24", "scipy>=1.10", "lifelines>=0.27", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["tenure"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
